# ToDo_List

./: forms.py  main.py  pyproject.toml  requirements.txt
instance/: todolist.db
static/css/: cover_page.css  login_page.css  register_page.css  todo_display_page.css  todo_page.css
templates/: base.html  cover.html  header.html  login.html  register.html  todo.html  tododisplay.html
