[tool.poetry]
name = "to do list"
version = "0.1.0"
description = "List with things to do."
authors = ["Michał <m.krepiniewicz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
